--- a/.github/workflows/destiny.yml
+++ b/.github/workflows/destiny.yml
@@ -1,28 +1,53 @@
 name: Destiny
+
 on:
   workflow_dispatch:
   schedule:
     - cron: '0 */2 * * *'
+
+concurrency:
+  group: destiny-build
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Use node
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14.x'
-    - name: Is the destiny a choice?
-      run: |
-            npm install xhr2
-            node imitation.js > README.md
-    - name: Check if there are any changes
-      id: verify_diff
-      run: |
-        git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
-    - name: Commit change & Push
-      if: steps.verify_diff.outputs.changed == 'true'
-      run: |
+      - uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14.x'
+
+      - name: Cache npm download cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-xhr2
+
+      - name: Install xhr2
+        run: npm install xhr2
+        
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-modules-xhr2
+
+      - name: Generate README.md
+        run: |
+          node imitation.js > README.md
+
+      - name: Detect changes
+        id: verify_diff
+        run: |
+          git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
+
+      - name: Commit change & Push
+        if: steps.verify_diff.outputs.changed == 'true'
+        run: |
             git config user.name 'github-actions[bot]'
             git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
             git commit -am "Choice has been made."
