--- a/.github/workflows/destiny.yml
+++ b/.github/workflows/destiny.yml
@@ -3,7 +3,7 @@ name: Destiny
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */2 * * *'
+    - cron: '0 0 * * *'
 
 concurrency:
   group: destiny-build
